feat: version 2